Fix layout wrapping to other lines

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,14 @@ img {
 h1 {
   margin-top: 0;
 }
-
+.search-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+.search-container > * {
+  border-radius: 0.5em;
+}
 button:focus,
 button:hover {
   cursor: pointer;
@@ -30,24 +37,37 @@ a {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: center;
-  /* word-break: break-all; */
-  /* overflow-wrap: break-word; */
+  justify-content: space-between;
+  align-items: center;
   gap: 1em;
+  margin: 0 auto;
 }
 .album {
   border-radius: 0.5em;
   padding: 0.5em;
   background: whitesmoke;
-  text-align: center;
+  max-width: 20rem;
 }
 .album:focus,
 .album:hover {
   cursor: pointer;
   background: silver;
 }
-@media (min-width: 40rem) {
+@media (min-width: 46rem) {
   .albums {
     flex-direction: row;
+  }
+  .search-container {
+    flex-direction: row;
+    align-items: center;
+  }
+  .album h2 {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-bottom: 0.5em;
+  }
+  .album:last-child {
+    margin-right: auto;
   }
 }
